# db-migrator

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  mappings.toml
.github/workflows/: ci.yml  release.yml
src/: args.rs  config.rs  connection.rs  database_extractor.rs  database_inserter.rs  database_migrator.rs  helpers.rs  main.rs  mappings.rs  options.rs  query.rs  schema.rs
src/common/: constraints.rs  errors.rs  helpers.rs  mod.rs  mssql_type.rs  mysql_type.rs  schema.rs  sql.rs  target_schema.rs  type_mapping_entry.rs
src/extract/: extractor.rs  format.rs  mod.rs  traits.rs
src/insert/: inserter.rs  mod.rs  query.rs  table_action.rs  traits.rs
src/migrate/: constraints_creator.rs  migration_options.rs  migration_result.rs  migrator.rs  mod.rs  table_migrator.rs  table_schema_mapper.rs  tests.rs  type_registry.rs
