[package]
name = "db-migrator"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
tokio-util = { version = "0.7.8", features = ["compat"] }
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4.16"
env_logger = "0.10.0"
structopt = "0.3"
chrono = { version = "0.4" }
toml = "0.7.5"
async-trait = "0.1"
hex = "0.4.3"
futures = "0.3"
tiberius = { version = "0.12.2" }
bb8 = "0.8.1"
bb8-tiberius = "0.15.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
debug = false