[package]
name = "db-migrator"
version = "0.3.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4" }
toml = "0.8"
async-trait = "0.1"
async-stream = "0.3"
hex = "0.4"
futures = "0.3"
tiberius = { version = "0.12.3" }
bb8 = "0.9"
bb8-tiberius = "0.16.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "mysql"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
debug = false